--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
             <h2>Hello, <span class="neon-orange">Shashank</span> here <span class="emoji">👋</span></h2>
             <p>MSCS Student | Data Analyst Researcher | ML Researcher</p>
             <br>
+            <br>
             <div class="image-container">
                 <img src="images/shashank.png" alt="Shashankimage" class="personal-pic">
             </div>
-            <a href="#portfolio" class="btn">Explore My Work</a>
+            <div class="btn-container">
+                <a href="https://drive.google.com/file/d/1U4LDzEhObonOMsgGnDUj5Xqb03b1zkPn/view?usp=sharing" class="btn">View Resume</a>
+                <a href="https://drive.google.com/uc?export=download&id=1U4LDzEhObonOMsgGnDUj5Xqb03b1zkPn" class="btn" download>Download Resume</a>
+            </div>
         </section>
         
 
