Navbar changes: Major dynamic pull up menu

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shashank Jagtap - Portfolio</title>
+  <title>Shashank Jagtap - Projects</title>
   <link rel="stylesheet" href="styles.css">
   <script defer src="scripts.js"></script>
 </head>
@@ -18,7 +18,7 @@
                     <label id="overlay" for="sidebar-active"></label>
                 <ul class="nav-links">
                     <label for="sidebar-active" class="close-sidebar-button"><img id="close_icon" src="images/close.svg" alt="Close Icon" width="24px" height="24px" /></label>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
                 </h1>
@@ -33,33 +33,32 @@
                 </div>
                 </nav>
         </header>
-        
-        <div id ="main-content">
-            <!-- Home Section -->
-            <section id="home" class="home">
-                <h2>Hello, <span class="neon-orange">Shashank</span> here <span class="emoji">👋</span></h2>
-                <p>MSCS Student | Data Analyst Researcher | ML Researcher</p>
-                <br>
-                <br>
-                <div class="image-container">
-                    <img src="images/shashank.png" alt="Shashankimage" class="personal-pic">
-                </div>
-                <div class="btn-container">
-                    <a href="https://drive.google.com/file/d/1U4LDzEhObonOMsgGnDUj5Xqb03b1zkPn/view?usp=sharing" class="btn">View Resume</a>
-                    <a href="https://drive.google.com/uc?export=download&id=1U4LDzEhObonOMsgGnDUj5Xqb03b1zkPn" class="btn" download>Download Resume</a>
-                </div>
-            </section>
-            
-            <hr>
 
-            <!-- About Section -->
-            <section id="about" class="about">
-                <h2>About Me</h2>
-                <p>I'm a passionate developer currently working on research projects at Texas A&M University. I love working with cutting-edge technologies and building intelligent systems using MobileNet V2 and more.</p>
+        <!-- Projects Section -->
+        <div id="main-content">
+            <section id="project" class="project">
+                <h2>Projects</h2>
+                <div class="gallery">
+                    <div class="card">
+                        <img src="images/project1.jpg" alt="Project 1">
+                        <h3>Project 1</h3>
+                        <p>Description of project 1 goes here.</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/project2.jpg" alt="Project 2">
+                        <h3>Project 2</h3>
+                        <p>Description of project 2 goes here.</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/project3.jpg" alt="Project 3">
+                        <h3>Project 3</h3>
+                        <p>Description of project 3 goes here.</p>
+                    </div>
+                </div>
             </section>
         </div>
     </div>
-        <hr>
+
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; Shashank Jagtap. All rights reserved.</p>
