Completed about me and technical skills

--- a/index.html
+++ b/index.html
@@ -50,13 +50,160 @@
                 </div>
             </section>
             
-            <hr>
+            <!-- <hr> -->
 
             <!-- About Section -->
             <section id="about" class="about">
-                <h2>About Me</h2>
-                <p>I'm a passionate developer currently working on research projects at Texas A&M University. I love working with cutting-edge technologies and building intelligent systems using MobileNet V2 and more.</p>
+                <h2>About Me <span>ℹ️</span></h2>
+                    <br>
+                    <p>
+                      I am currently a Research Assistant at Texas A&M University, pursuing my Master of Science in Computer Science. With a strong foundation in software development, data analytics, and machine learning, I have honed my skills through academic research, industry internships, and hands-on projects. 
+                      <br><br>
+                      I am well-versed in NLP, image classification, and data science workflows, including building data pipelines and creating insightful visualizations. Previously, I gained valuable experience at RIA Advisory as an ML-Android app developer, working across front-end, back-end, as well as ML frameworks. 
+                      <br><br>
+                      I quickly adapt to new technologies and trends, collaborating effectively across teams. Driven by a passion for problem-solving, I seek challenges and continuous learning opportunities.
+                    </p>
             </section>
+            <br>
+            <hr>
+
+            <!-- Technical Skills -->
+            <section id="technical-skills" class="technical-skills">
+                <!-- <h2>Technical Skills <span>💻</span></h2> -->
+                <h2><span class="heading-content">Technical Skills 💻</span></h2>
+                <div class="skills-container">
+
+                    <div class="skill-box">
+                        <h3>Programming Languages</h3>
+                        <div class="img-container" data-name="Python">
+                            <img src="images/technical_skills/programming/python.svg" alt="Python">
+                        </div>
+                        <div class="img-container" data-name="C">
+                            <img src="images/technical_skills/programming/C.svg" alt="C">
+                        </div>
+                        <div class="img-container" data-name="C++">
+                            <img src="images/technical_skills/programming/C++.svg" alt="C++">
+                        </div>
+                        <div class="img-container" data-name="R">
+                            <img src="images/technical_skills/programming/r.svg" alt="R">
+                        </div>
+                        <div class="img-container" data-name="Java">
+                            <img src="images/technical_skills/programming/java.svg" alt="Java">
+                        </div>
+                        <div class="img-container" data-name="JavaScript">
+                            <img src="images/technical_skills/programming/javascript.svg" alt="JavaScript">
+                        </div>
+                        <div class="img-container" data-name="Ruby">
+                            <img src="images/technical_skills/programming/ruby.svg" alt="Ruby">                 
+                        </div>
+                        <div class="img-container" data-name="PHP">
+                            <img src="images/technical_skills/programming/php.svg" alt="PHP">                   
+                        </div>
+                    </div>
+
+                    <div class="skill-box">
+                        <h3>Markup and Stylesheet Languages</h3>
+                        <div class="img-container" data-name="HTML">
+                            <img src="images/technical_skills/programming/html.svg" alt="HTML">
+                        </div>
+                        <div class="img-container" data-name="CSS">
+                            <img src="images/technical_skills/programming/css.svg" alt="CSS">
+                        </div>
+                    </div>
+
+                    <div class="skill-box">
+                        <h3>Databases</h3>
+                        <div class="img-container" data-name="MySQL">
+                            <img src="images/technical_skills/databases/mysql.svg" alt="MySQL">
+                        </div>
+                        <div class="img-container" data-name="PostgreSQL">
+                            <img src="images/technical_skills/databases/postgresql.svg" alt="PostgreSQL">
+                        </div>
+                        <div class="img-container" data-name="SQL Server Management Studio (SSMS)">
+                            <img src="images/technical_skills/databases/microsoft-sql-server.svg" alt="SQL-Server-Management-Studio">
+                        </div>
+                        <div class="img-container" data-name="Oracle">
+                            <img src="images/technical_skills/databases/oracle.svg" alt="Oracle">
+                        </div>
+                        <div class="img-container" data-name="MongoDB">
+                            <img src="images/technical_skills/databases/mongo-db.svg" alt="MongoDB">
+                        </div>
+                    </div>
+
+                    <div class="skill-box">
+                        <h3>Frameworks and Libraries</h3>
+                        <div class="img-container" data-name="React">
+                            <img src="images/technical_skills/Framework/react.svg" alt="React">
+                        </div>
+                        <div class="img-container" data-name="Ruby on Rails">
+                            <img src="images/technical_skills/Framework/ruby-on-rails.svg" alt="Ruby on Rails">
+                        </div>
+                        <div class="img-container" data-name="PyTorch">
+                            <img src="images/technical_skills/Framework/pytorch.svg" alt="PyTorch">
+                        </div>
+                        <div class="img-container" data-name="TensorFlow">
+                            <img src="images/technical_skills/Framework/tensorflow.svg" alt="TensorFlow">
+                        </div>
+                        <div class="img-container" data-name="NumPy">
+                            <img src="images/technical_skills/Framework/numpy.svg" alt="NumPy">
+                        </div>
+                        <div class="img-container" data-name="Pandas">
+                            <img src="images/technical_skills/Framework/pandas.svg" alt="Pandas">
+                        </div>
+                    </div>
+
+                    <div class="skill-box">
+                        <h3>Data Processing and Analytics</h3>
+                        <div class="img-container" data-name="Hadoop">
+                            <img src="images/technical_skills/dataprocessing/hadoop.svg" alt="Hadoop">
+                        </div>
+                        <div class="img-container" data-name="PowerBI">
+                            <img src="images/technical_skills/dataprocessing/power-bi-logo.svg" alt="PowerBI">
+                        </div>
+                        <div class="img-container" data-name="Tableau">
+                            <img src="images/technical_skills/dataprocessing/tableau-software.svg" alt="Tableau">
+                        </div>
+                        <div class="img-container" data-name="Google Analytics">
+                            <img src="images/technical_skills/dataprocessing/google-analytics.svg" alt="Google Analytics">
+                        </div>
+                        <div class="img-container" data-name="MS-Excel">
+                            <img src="images/technical_skills/dataprocessing/excel.svg" alt="MS-Excel">
+                        </div>
+                    </div>
+
+                    <div class="skill-box">
+                        <h3>DevOps and Deployment</h3>
+                        <div class="img-container" data-name="Docker">
+                            <img src="images/technical_skills/devops/docker.svg" alt="Docker">
+                        </div>
+                        <div class="img-container" data-name="AWS">
+                            <img src="images/technical_skills/devops/aws.svg" alt="AWS">
+                        </div>
+                        <div class="img-container" data-name="Heroku">
+                            <img src="images/technical_skills/devops/heroku.svg" alt="Heroku">
+                        </div>
+                        <div class="img-container" data-name="Git">
+                            <img src="images/technical_skills/devops/git.svg" alt="Git">
+                        </div>
+                        <div class="img-container" data-name="GitHub">
+                            <img src="images/technical_skills/devops/github.svg" alt="GitHub">
+                        </div>
+                    </div>
+
+                    <div class="skill-box">
+                        <h3>Other Tools</h3>
+                        <div class="img-container" data-name="Android Studio">
+                            <img src="images/technical_skills/other/android-studio.svg" alt="Android Studio">
+                        </div>
+                        <div class="img-container" data-name="Linux">
+                            <img src="images/technical_skills/other/linux.svg" alt="Linux">
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+  
         </div>
     </div>
         <hr>
