Experience changes: Done

--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-container">
          <!-- Navbar -->
-         <header class="navbar">
+        <header class="navbar">
             <h1>
                 <nav class="nav-content">
                     <input type="checkbox" id="sidebar-active">
@@ -19,7 +19,6 @@
                 <ul class="nav-links">
                     <label for="sidebar-active" class="close-sidebar-button"><img id="close_icon" src="images/close.svg" alt="Close Icon" width="24px" height="24px" /></label>
                     <li><a href="index.html#home">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#technical-skills">Skills</a></li>
                     <li><a href="index.html#experience">Experience</a></li>
                     <li><a href="#project">Projects</a></li>
@@ -37,7 +36,7 @@
                         </a>
                     </div>
                     <div class="social-icons-image" data-name="Switch Theme 💡">
-                    <img src="images/moon.png" class="icon" id="icon_theme" alt="Theme toggle">
+                    <img src="images/moon.svg" class="icon" id="icon_theme" alt="Theme toggle">
                     </div>
                 </div>
                 </nav>
