first phase of projects and some changes in about me

--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
                 <h2>About Me <span>ℹ️</span></h2>
                     <br>
                     <p>
-                      I am currently a Research Assistant at Texas A&M University, pursuing my Master of Science in Computer Science. With a strong foundation in software development, data analytics, and machine learning, I have honed my skills through academic research, industry internships, and hands-on projects. 
+                      I am currently a Research Assistant at <a href="https://www.tamu.edu" target="_blank">Texas A&M University
+                      </a>, pursuing my Master of Science in Computer Science. With a strong foundation in machine learning, software development, and data analytics, I have honed my skills through academic research, industry internships, and hands-on projects. 
                       <br><br>
-                      I am well-versed in NLP, image classification, and data science workflows, including building data pipelines and creating insightful visualizations. Previously, I gained valuable experience at RIA Advisory as an ML-Android app developer, working across front-end, back-end, as well as ML frameworks. 
+                      I specialize in NLP, image classification, and data science workflows, focusing on scalable data pipelines and actionable visualizations. I had the privilege of collaborating with
+                      <a href="https://scholar.google.com/citations?user=eX4rjeQAAAAJ&hl=en" target="_blank">Dr. Arun Sen</a> and 
+                      <a href="https://mays.tamu.edu/directory/buffy-mosley/" target="_blank">Dr. Buffy Mosley</a> on projects that advanced image classification techniques using deep neural networks (DNN). Currently, I am working with
+                      <a href="https://scholar.google.com/citations?user=laqfZ-4AAAAJ&hl=en" target="_blank">Dr. Chia-Che Tsai</a> on my thesis, which explores privacy security solutions from temperature sensing devices. My experience as an ML-Android app developer at RIA Advisory further strengthened my skills across front-end, back-end, and machine learning frameworks, preparing me to tackle complex challenges effectively.
                       <br><br>
                       I quickly adapt to new technologies and trends, collaborating effectively across teams. Driven by a passion for problem-solving, I seek challenges and continuous learning opportunities.
                     </p>
@@ -222,7 +226,7 @@
                         <div class="timeline-date-current" data-small="Aug 2024 - Present" data-full="August 2024 - Present">August 2024 - Present</div>
                         <div class="timeline-dot-current"></div>
                         <div class="timeline-content-current">
-                            <h3 data-small="RA-DA @" data-full="Research Assistant-Data Analytics @">
+                            <h3 data-small="Research Assistant-DA @" data-full="Research Assistant-Data Analytics @">
                                 Research Assistant-Data Analytics @
                             </h3>
                             <a href="https://mays.tamu.edu/departments/information-and-operations-management/" target="_blank" data-small="ISTM, TAMU" data-full="Info & Operations Management , Texas A&M">
@@ -235,7 +239,7 @@
                         <div class="timeline-date" data-small="Oct 2022 - May 2024" data-full="October 2022 - May 2024">October 2022 - May 2024</div>
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
-                            <h3 data-small="RA-ML @" data-full="Research Assistant-Machine Learning @">
+                            <h3 data-small="Research Assistant-ML @" data-full="Research Assistant-Machine Learning @">
                               Research Assistant-Machine Learning@
                             </h3>
                             <a href="https://mays.tamu.edu/departments/marketing/" target="_blank" data-small="Dept. of Mktg, TAMU" data-full="Dept. of Marketing, Texas A&M">
@@ -277,7 +281,7 @@
         <hr>
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; Shashank Jagtap. All rights reserved.</p>
+        <p>&copy; 2024 Shashank Jagtap. All rights reserved.</p>
     </footer>
 </body>
 </html>
