--- a/project.html
+++ b/project.html
@@ -44,23 +44,123 @@
 
         <!-- Projects Section -->
         <section id="project" class="project">
-            <h2>Projects</h2>
+            <h2><span class="heading-content">Projects 💡</span></h2>
             <div class="gallery">
                 <div class="card">
-                    <img src="images/project1.jpg" alt="Project 1">
-                    <h3>Project 1</h3>
-                    <p>Description of project 1 goes here.</p>
+                    <h3>NLP based Sentiment Analysis using Transformers</h3>
+                    <hr>
+                    <img src="images/project/sentimentanalysis.jpeg" alt="Project 1" class="project-img">
+                    <br>
+                    <br>
+                    <p>Developed a sentiment analysis model to classify restaurant reviews and provide timely insights for improving dining experiences. The project leverages BERT(base) model, wherein using PyTorch the first three transformer layers were frozen to enhance efficiency. After preprocessing and adding a sentiment column, the model classified reviews as 'Positive,' 'Neutral,' or 'Negative,' achieving 82% testing accuracy. The model performed well with 'Positive' and 'Neutral' reviews but encountered challenges with 'Negative' predictions, likely due to label imbalance. A custom classifier with linear layers and 40% dropout ensures robust performance. This automation helps restaurants quickly process large volumes of feedback, identifying trends and addressing customer concerns.</p>
+                    <br>
+                    <div class="project-links">
+                        <div class="project-icon-image" data-name="Github Link">
+                            <a href="https://github.com/jagtapshashank/NLP-based-Sentiment-Analysis-using-Transformers" target="_blank">
+                                <img src="images/githubdark.svg" alt="GitHub Repository" class="project-icon" >
+                            </a>
+                        </div>
+                        <div class="project-icon-image" data-name="Documentation Link">
+                            <a href="https://drive.google.com/drive/folders/1sTY_xy7ZwH9T-n48tKssRvRtZrjqymWR?usp=share_link" target="_blank">
+                                <img src="images/link.svg" alt="GitHub Repository" class="project-icon">
+                            </a>   
+                        </div> 
+                    </div>            
                 </div>
                 <div class="card">
-                    <img src="images/project2.jpg" alt="Project 2">
-                    <h3>Project 2</h3>
-                    <p>Description of project 2 goes here.</p>
+                    <h3>PHD Annual Review System</h3>
+                    <hr>
+                    <img src="images/project/PhDAnnualReviewFinalPresentation.jpg" alt="Project 2">
+                    <br>
+                    <br>
+                    <p>The PhD Annual Review System, developed by my team for Texas A&M University, is a web application designed to streamline the annual review process, addressing user dissatisfaction with the previous, labor-intensive system. Serving PhD students, faculty, and administrators, it offers a user-friendly, centralized platform for document submission, evaluation, and progress tracking, supporting up to 8,000 users. Key features include an efficient administrator view, which reduces review time by 25% by eliminating the need for faculty to switch between screens, and robust reporting capabilities that aid data-driven decision-making. This application improves the PhD experience and enhances program quality.</p>
+                    <br>
+                    <div class="project-links">
+                        <div class="project-icon-image" data-name="Github Link">
+                            <a href="https://github.com/jagtapshashank/PhD-Annual-Review-System" target="_blank">
+                                <img src="images/githubdark.svg" alt="GitHub Repository" class="project-icon" >
+                            </a>
+                        </div>
+                        <div class="project-icon-image" data-name="Documentation Link">
+                            <a href="https://drive.google.com/drive/folders/1xYgDFp1w7Rly43sNi0oMq3HEvEoxgADI?usp=share_link" target="_blank">
+                                <img src="images/link.svg" alt="GitHub Repository" class="project-icon">
+                            </a>   
+                        </div> 
+                    </div>         
                 </div>
                 <div class="card">
-                    <img src="images/project3.jpg" alt="Project 3">
-                    <h3>Project 3</h3>
-                    <p>Description of project 3 goes here.</p>
+                    <h3>Motion image classifier</h3>
+                    <hr>
+                    <img src="images/project/motion.png" alt="Project 3">
+                    <br>
+                    <br>
+                    <p>As a Graduate Assistant at Texas A&M University’s Mays Business School, I contributed to research on the impact of dynamic versus static images on social media. I developed an image classification model that achieved 92.4% accuracy, marking a 12.4% improvement over the previous model and reducing model building time from 6 hours to 20 minutes. Leveraging TensorFlow and transfer learning with ResNet50, VGG16, and CNN architectures, I enhanced both efficiency and accuracy. This model enables more effective analysis of image engagement on social media, providing insights that can guide marketing strategies and content optimization.</p>
+                    <br>
+                    <div class="project-links">
+                        <div class="project-icon-image" data-name="Github Link">
+                            <a href="https://github.com/jagtapshashank/Static-and-Dynamic-image-classifier" target="_blank">
+                                <img src="images/githubdark.svg" alt="GitHub Repository" class="project-icon" >
+                            </a>
+                        </div>
+                    </div>         
                 </div>
+
+                <div class="card">
+                    <h3>Loan Repayment Predictor Application</h3>
+                    <hr>
+                    <img src="images/project/loan.jpg" alt="Project 4">
+                    <br>
+                    <br>
+                    <p>Following Loan Prediction System leverages machine learning to forecast loan repayment probability accurately. Using Python and various libraries, we cleaned and preprocessed a dataset from multiple sources, performed exploratory data analysis, and applied feature engineering to identify key predictive attributes. XGBoost emerged as the best-performing algorithm, delivering the highest accuracy and recall. The application, deployed via Flask and Render, offers easy accessibility for users and banks. This model enhances loan management, reduces fraud, and minimizes both bank and applicant wait times, streamlining the loan approval process.</p>
+                    <br>
+                    <div class="project-links">
+                        <div class="project-icon-image" data-name="Github Link">
+                            <a href="https://github.com/jagtapshashank/Loan-Predictor-Application" target="_blank">
+                                <img src="images/githubdark.svg" alt="GitHub Repository" class="project-icon" >
+                            </a>
+                        </div>
+                        <div class="project-icon-image" data-name="Documentation Link">
+                            <a href="https://drive.google.com/drive/folders/1g-yMLKLQenOv5ASno-0fj_K6DxtbmWR7?usp=sharing" target="_blank">
+                                <img src="images/link.svg" alt="GitHub Repository" class="project-icon">
+                            </a>   
+                        </div> 
+                    </div>         
+                </div>
+
+                <div class="card">
+                    <h3>Covid 19 Real time Mask Detection</h3>
+                    <hr>
+                    <img src="images/project/covidmask.jpeg" alt="Project 5">
+                    <br>
+                    <br>
+                    <p>This Real-Time Mask Detection System improves public safety by continuously monitoring mask compliance in real-time through surveillance camera feeds. Built using TensorFlow and MobileNet, it efficiently processes live video streams to detect if individuals are wearing masks, reaching an impressive 95.5% training and 93.5% testing accuracy. The model is highly portable with a lightweight 13.2 MB size, enabling quick and seamless deployment on multiple platforms. Leveraging a dataset of 10,000 images, along with OpenCV’s face detection, this system accurately identifies faces and masks even in crowded settings. This solution not only enhances health guideline compliance but also helps organizations protect their employees, customers, and the broader community amidst ongoing pandemic concerns.</p>
+                    <br>
+                    <div class="project-links">
+                        <div class="project-icon-image" data-name="Github Link">
+                            <a href="https://github.com/jagtapshashank/COVID19-real_time_mask_detection" target="_blank">
+                                <img src="images/githubdark.svg" alt="GitHub Repository" class="project-icon" >
+                            </a>
+                        </div>
+                    </div>         
+                </div>
+            
+                <div class="card">
+                    <h3>COVID-19 Vaccination Portal</h3>
+                    <hr>
+                    <img src="images/project/coviddata.jpeg" alt="Project 6">
+                    <br>
+                    <br>
+                    <p>Developed and deployed a full-stack website for our institution to efficiently manage the vaccination statuses of 2,500 engineering students, creating a digital data management portal that reduced search time for vaccination status by 80%. Initially the project was developed on localhost XAMPP, and later deployed to AWS for better scalability and accessibility. With MySQL handling database and PHP for seamless database connectivity, an intuitive, responsive frontend for a user-friendly experience were developed too. To streamline reporting, database views were implemented that dynamically generated lists of fully and partially vaccinated students, enabling quick access to detailed vaccination records. This system facilitated a more organized and effective approach to health management within the institution during harsh COVID times.</p>
+                    <br>
+                    <!-- <div class="project-links">
+                        <div class="project-icon-image" data-name="Github Link">
+                            <a href="https://github.com/jagtapshashank/COVID19-real_time_mask_detection" target="_blank">
+                                <img src="images/githubdark.svg" alt="GitHub Repository" class="project-icon" >
+                            </a>
+                        </div>
+                    </div>          -->
+                </div>
+            
             </div>
         </section>
 
@@ -69,7 +169,7 @@
         <hr>
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; Shashank Jagtap. All rights reserved.</p>
+        <p>&copy; 2024 Shashank Jagtap. All rights reserved.</p>
     </footer>
 </body>
 </html>
